# Django-CRM-

./: .gitignore  pyproject.toml  rav.yaml  requirements.prod.txt  requirements.txt
src/: manage.py
src/contacts/: models.py  views.py
src/contacts/migrations/: 0001_initial.py  0002_contact_user.py  0003_contact_notes.py  0004_contact_last_edited_by_alter_contact_user.py  0005_contact_created_at_contact_updated_at.py
src/crmtool/: asgi.py  settings.py  urls.py  wsgi.py
src/dashboard/: views.py
src/events/: handlers.py  models.py  services.py
src/events/migrations/: 0001_initial.py  0002_alter_event_type.py  0002_remove_event_name.py  0003_alter_event_type.py  0003_event_user.py  0004_remove_event_timestamp_event_time.py
src/templates/contacts/: detail.html  list.html
src/templates/contacts/snippets/: contact-card.html
